# vertex-ai-search

./: .ai-safety-manifest  .envrc  .envrc.local.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .venv  CLAUDE.md  Dockerfile  FEATURE_24_SUMMARY.md  GENESIS_GUIDE.md  Makefile  README.md  docker-compose.yml  mypy.ini  prepare_commit.sh  pyproject.toml
.claude/: LEAN-TDD-WORKFLOW.md  settings.json  vertex-search-history-and-feature.md
.genesis/: .sync_checksums.json  diagnose-typecheck.sh  manifest.yml  sync.yml
answer-service/: .envrc  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml
answer-service/scripts/: setup.sh
answer-service/src/answer_service/: __init__.py  main.py  models.py  service.py  service_real.py
answer-service/tests/: __init__.py  test_acceptance.py  test_integration.py  test_main.py  test_models.py  test_service.py
cli-orchestrator/: CLAUDE.md  Makefile  README.md  pyproject.toml
config/: defaults.yaml  test.yaml  (+4 more)
config-manager/: CLAUDE.md  Makefile  README.md  pyproject.toml
demo-website/: .dockerignore  .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  STRUCTURE.txt  VALIDATION.md  deploy.sh  pyproject.toml  run_tests.sh
demo-website/src/demo_website/: __init__.py  config.py  main.py
demo-website/src/demo_website/static/: app.js  index.html  style.css
demo-website/tests/: __init__.py  test_api.py  test_config.py  test_integration.py  test_performance_ui.py  test_static_content.py
document-uploader/: .ai-safety-manifest  .pre-commit-config.yaml  FIX_REPORT.md  Makefile  README.md  pyproject.toml
document-uploader/scripts/: setup.sh
document-uploader/src/document_uploader/: __init__.py  main.py  retry.py  uploader.py
document-uploader/tests/: __init__.py  conftest.py  test_document_uploader.py  test_integration.py  test_main.py  test_retry.py  test_uploader_unit.py
embedding-generator/: .envrc  .gitignore  CLAUDE.md  FEATURE_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  TDD_IMPLEMENTATION_SUMMARY.md  VERIFICATION.md  pyproject.toml
embedding-generator/src/embedding_generator/: __init__.py  generator.py
embedding-generator/tests/: __init__.py  test_generator.py
filename-sanitizer/: CLAUDE.md  Makefile  README.md  pyproject.toml
filename-sanitizer/scripts/: setup.sh
filename-sanitizer/src/filename_sanitizer/: __init__.py  cli.py  main.py  sanitizer.py
filename-sanitizer/tests/: __init__.py  test_cli.py  test_sanitizer.py
gcs-manager/: .ai-safety-manifest  .envrc  Makefile  pyproject.toml  run_tests.py
gcs-manager/docs/: CLAUDE.md  README.md
gcs-manager/scripts/: setup.sh
gcs-manager/src/gcs_manager/: __init__.py  gcs_manager.py  main.py  models.py
gcs-manager/tests/: __init__.py  conftest.py  test_cli.py  test_gcs_manager.py  test_gcs_manager_acceptance.py  test_integration.py  test_models.py
html-chunker/: .envrc  CLAUDE.md  Makefile  README.md  pyproject.toml
html-chunker/src/html_chunker/: __init__.py  chunker.py
html-chunker/tests/: __init__.py  test_chunker.py
load-tester/: .coverage.M-MVGJVH9Y9M.15301.XyyafnZx  .envrc  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TIMING_FIXES_REPORT.md  pyproject.toml  validate_fixes.py
load-tester/src/load_tester/: __init__.py  load_tester.py  main.py  models.py
load-tester/tests/: __init__.py  conftest.py  test_acceptance.py  test_cli.py  test_code_quality.py  test_constants.py  test_integration.py  test_load_tester.py  test_models.py
metrics-collector/: CLAUDE.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  Makefile  PANDAS_REMOVAL_REPORT.md  README.md  pyproject.toml
metrics-collector/src/metrics_collector/: __init__.py  main.py  metrics_collector.py  models.py
metrics-collector/tests/: __init__.py  conftest.py  test_acceptance.py  test_export.py  test_main.py  test_metrics_collector.py  test_models.py
search-api/: .dockerignore  .envrc  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  commit_msg.txt  deploy.sh  pyproject.toml
search-api/src/search_api/: __init__.py  api.py  main.py
search-api/tests/: __init__.py  conftest.py  test_api_module.py  test_health_endpoint.py  test_search_endpoint.py  test_summarize_endpoint.py
search-engine/: .envrc  .gitignore  CLAUDE.md  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml  test_validation.py  validate_module.py
search-engine/scripts/: setup.sh
search-engine/src/search_engine/: __init__.py  main.py  models.py  search_engine.py
search-engine/tests/: __init__.py  conftest.py  test_acceptance.py  test_cli.py  test_integration.py  test_models.py  test_search_engine.py
shared-contracts/: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  TDD_IMPLEMENTATION_SUMMARY.md  pyproject.toml
shared-contracts/scripts/: setup.sh
shared-contracts/src/shared_contracts/: __init__.py  models.py
shared-contracts/tests/: __init__.py  test_models.py
vector-index-prep/: .envrc  CLAUDE.md  Makefile  README.md  pyproject.toml
vector-index-prep/src/vector_index_prep/: __init__.py  jsonl_generator.py
vector-index-prep/tests/: __init__.py  test_jsonl_generator.py  test_metadata_conversion.py  test_validation.py
vector-query-client/: .envrc  CLAUDE.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  TDD_IMPLEMENTATION_SUMMARY.md  VERIFICATION.md  pyproject.toml
vector-query-client/src/vector_query_client/: __init__.py  query_client.py
vector-query-client/tests/: __init__.py  test_query_client.py
vertex-datastore/: .ai-safety-manifest  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml
vertex-datastore/docs/: README.md
vertex-datastore/scripts/: setup.sh
vertex-datastore/src/vertex_datastore/: __init__.py  cli.py  datastore_manager.py  main.py  models.py
vertex-datastore/tests/: __init__.py  conftest.py  test_acceptance.py  test_basic.py  test_cli.py  test_integration.py  test_models.py
(+154 files in other folders)
