[tool.poetry]
name = "vertex-ai-search"
version = "0.1.0"
description = "Vertex AI Search integration and benchmarking framework"
authors = ["Capgemini COE for Google"]
readme = "README.md"
package-mode = false  # Integration layer, not a package

[tool.poetry.dependencies]
python = "^3.13"
genesis-cli = { path = "/Users/jameshousteau/Downloads/genesis_cli-2.0.19-py3-none-any.whl" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.8.5"
pre-commit = "^4.0.1"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".genesis", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "C90", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
exclude = [
    "(?x)(^nq-downloader/|^html-extractor/|^filename-sanitizer/|^config-manager/|^cli-orchestrator/|^gcs-manager/|^document-uploader/|^vertex-datastore/|^search-engine/|^answer-service/|^metrics-collector/|^load-tester/|^shared-contracts/|^html-chunker/|^embedding-generator/|^vector-index-prep/|^vector-search-index/|^vector-query-client/|^search-api/|^demo-website/)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov-fail-under=0",  # No coverage requirement for integration tests yet
]
markers = [
    "integration: Integration tests that cross module boundaries",
    "slow: Tests that take > 1 second",
    "requires_gcp: Tests that require GCP credentials",
]

[tool.coverage.run]
source = ["tests"]  # Only cover integration tests at root
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
