[tool.poetry]
name = "embedding-generator"
version = "0.1.0"
description = "Generate 768-dimensional embeddings using Vertex AI text-embedding-004"
authors = ["Genesis <genesis@local>"]
readme = "README.md"
packages = [{include = "embedding_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-aiplatform = "^1.38.0"
pydantic = "^2.5.0"
shared-contracts = {path = "../shared-contracts", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["embedding_generator"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--cov=embedding_generator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
