[tool.poetry]
name = "search-api"
version = "0.1.0"
description = "Cloud Run API service for fast vector search and streaming summaries"
authors = ["Vertex AI Search Team"]
readme = "README.md"
packages = [{include = "search_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
cachetools = "^5.5.0"
google-cloud-aiplatform = "^1.73.0"
google-generativeai = "^0.8.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
shared-contracts = {path = "/Users/source-code/vertex-ai-search/shared-contracts", develop = true}
vector-query-client = {path = "/Users/source-code/vertex-ai-search/vector-query-client", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=search_api",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
