[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = "Pure search functionality testing using Vertex AI Agent Builder API"
authors = ["Genesis <genesis@local>"]
readme = "README.md"
packages = [{include = "search_engine", from = "src"}]

[tool.poetry.scripts]
search-engine = "search_engine.main:main"

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-discoveryengine = {version = "^0.12.0", optional = true}
click = "^8.1.7"

[tool.poetry.extras]
gcp = ["google-cloud-discoveryengine"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["search_engine"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N818"]  # Exception names in mocks don't need Error suffix

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--cov=search_engine",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
